Convert from specific mutations to generalized app mutations

--- a/etc/rsp.conf
+++ b/etc/rsp.conf
@@ -1,4 +1,8 @@
+available_extensions=Basic,Simple,Advanced
 extensions=Basic
 
 [host foo]
 extensions=Basic,Simple
+
+[host bar]
+extensions=Advanced,Simple
